# adversary

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: adversarial.rs  exhaustive.rs  input_generator.rs  lib.rs  sample.rs  shrink.rs
src/generators/: mod.rs
src/generators/canonical/: bool.rs  float.rs  ints.rs  mod.rs  unit.rs
